[project]
name = "epub2m4b"
version = "0.1.0"
description = "A macOS app to convert EPUB books directly to M4B audiobooks with chapters."
authors = [
    { name = "Google Gemini" }
]
requires-python = ">=3.9"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "edge-tts>=6.1.9",
    "mutagen>=1.47.0"
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"